--- a/docs/LeetCode刷题日记/02.LeetCode打脸日记/01.【437】路径总和.md
+++ b/docs/LeetCode刷题日记/02.LeetCode打脸日记/01.【437】路径总和.md
@@ -13,24 +13,24 @@ tags:
 [437:路径总和Ⅲ🎁](https://leetcode-cn.com/problems/path-sum-iii/)
 
 ## 题目描述
-> 给定一个二叉树的根节点 root ，和一个整数 `targetSum` ，求该二叉树里节点值之和等于 `targetSum` 的 路径 的数目。
-> **路径** 不需要从根节点开始，也不需要在叶子节点结束，但是路径方向必须是向下的（只能从父节点到子节点）。
+> 给定一个二叉树的根节点 root ，和一个整数 `targetSum` ，求该二叉树里节点值之和等于 `targetSum` 的 路径 的数目。<br/>
+> **路径** 不需要从根节点开始，也不需要在叶子节点结束，但是路径方向必须是向下的（只能从父节点到子节点）。<br/>
 > 
-> 示例 1：
-> ![示例一](https://assets.leetcode.com/uploads/2021/04/09/pathsum3-1-tree.jpg)
-> 
-> 输入：root = [10,5,-3,3,2,null,11,3,-2,null,1], targetSum = 8
-> 输出：3
-> 解释：和等于 8 的路径有 3 条，如图所示。
-> 示例 2：
-> 
-> 输入：root = [5,4,8,11,null,13,4,7,2,null,null,5,1], targetSum = 22
-> 输出：3
->  
-> 提示:
-> 二叉树的节点个数的范围是 [0,1000]
-> -109 <= Node.val <= 109 
-> -1000 <= targetSum <= 1000 
+> 示例 1：<br/>
+> ![示例一](https://assets.leetcode.com/uploads/2021/04/09/pathsum3-1-tree.jpg)<br/>
+> <br/>
+> 输入：root = [10,5,-3,3,2,null,11,3,-2,null,1], targetSum = 8<br/>
+> 输出：3<br/>
+> 解释：和等于 8 的路径有 3 条，如图所示。<br/>
+> 示例 2：<br/>
+> <br/>
+> 输入：root = [5,4,8,11,null,13,4,7,2,null,null,5,1], targetSum = 22<br/>
+> 输出：3<br/>
+>  <br/>
+> 提示:<br/>
+> 二叉树的节点个数的范围是 [0,1000]<br/>
+> -10^9 <= Node.val <= 10^9 <br/>
+> -1000 <= targetSum <= 1000 <br/>
 
 ## 解法一 双DFS
 ```c++
@@ -76,10 +76,9 @@ public:
     }
 };
 ```
-> 执行用时：**84 ms**, 在所有 C++ 提交中击败了`5.31%`的用户
+> 执行用时：**84 ms**, 在所有 C++ 提交中击败了`5.31%`的用户<br/>
 > 内存消耗：**15.5 MB**, 在所有 C++ 提交中击败了`48.15%`的用户
 
-[^呜呜，思路是别人给的，代码自己写的，我好菜🤦‍♂️...]
 
 ## 解法二 前缀和
 ```c++
@@ -107,11 +106,11 @@ public:
     }
 };
 ```
-> 执行用时：**12 ms**, 在所有 C++ 提交中击败了`93.60%`的用户
+> 执行用时：**12 ms**, 在所有 C++ 提交中击败了`93.60%`的用户<br/>
 > 内存消耗：**18.8 MB**, 在所有 C++ 提交中击败了`23.38%`的用户
 
-[^呜呜，思路是别人给的，代码自己写的，我好菜🤦‍♂️...]
-
-> 本题点评，感觉难度并不大，但是就是差那么一点想出来
-> 不知道是不是最近刷题懈怠的原因👩‍🦼
-> 没关系，继续加油，今天也是元气满满的一天🤴🏽🚛
+## 本题点评
+> 感觉难度并不大，但是就是差那么一点想出来<br/>
+> 思路是别人给的，代码自己写的，我好菜🤦‍♂️...<br/>
+> 就权当时最近刷题懈怠的原因👩‍🦼<br/>
+> 没关系，继续加油，今天也是元气满满的一天🤴🏽🚛<br/>
