--- a/docs/LeetCode刷题日记/01.Summary.md
+++ b/docs/LeetCode刷题日记/01.Summary.md
@@ -1,5 +1,5 @@
 ---
-title: guildline
+title: Summary
 date: 2021-09-27 07:13:50
 permalink: /pages/c6d6c9/
 categories:
@@ -10,6 +10,8 @@ tags:
 
 ## 本版块用于记录本人的LeetCode刷题记录
 
+## 附上本人LeetCode主页链接
+[辜月十二](https://leetcode-cn.com/u/nilu_cn/)
 ### 主要内容有
 
 1. **"🐱‍👓有效的"** 每日一题打卡
