--- a/docs/LeetCode刷题日记/02.打脸日记/01.【437】路径总和.md
+++ b/docs/LeetCode刷题日记/02.打脸日记/01.【437】路径总和.md
@@ -4,7 +4,7 @@ date: 2021-09-28 09:08:54
 permalink: /pages/74d1f3/
 categories:
   - LeetCode刷题日记
-  - LeetCode打脸日记
+  - 打脸日记
 tags:
   - LeetCode
   - 中等
